--- a/conf/app.ini
+++ b/conf/app.ini
@@ -29,9 +29,9 @@ WriteTimeout = 60
 [database]
 Type = mysql
 User = root 
-Password = rootroot 
-Host = 127.0.0.1:3306
-Name = tasks 
+Password = MyNewPass4! 
+Host = 132.232.68.96:3306
+Name = ams 
 TablePrefix = 
 
 [redis]
